Update configuration file

--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -1,1 +1,1 @@
-{"meta":{"username":"roelvs","repositoryName":"roelvs.github.io","branch":"master"},"site":{"title":"Random thoughts","url":"https://roelvs.github.io"},"socialnetwork":{},"theme":{"name":"Casper","url":"//roelvs.github.io/themes/Casper"}}
+{"meta":{"username":"roelvs","repositoryName":"roelvs.github.io","branch":"master"},"site":{"title":"Random thoughts","disqus":"roelvsblog","url":"https://roelvs.github.io"},"socialnetwork":{},"theme":{"name":"Casper","url":"//roelvs.github.io/themes/Casper"}}
